--- a/web-server/templates/views/404page.hbs
+++ b/web-server/templates/views/404page.hbs
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
-    <img src="./img/receiveform.PNG">
-    <p >Created By {{name}} </p>
+    {{>header}}
+
+    {{message}}
+
+    {{>footer}}
 </body>
 
 </html>
