--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -9,7 +9,7 @@
 <body>
 
     {{>header}}
-    <img src="./img/receiveform.PNG">
+    <img class="portrait" src="./img/receiveform.PNG">
     <p>Created By {{name}} </p>
     {{>footer}}
 
