--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -9,8 +9,7 @@
 <body>
 
     {{>header}}
-    <img class="portrait" src="./img/receiveform.PNG">
-    <p>Created By {{name}} </p>
+    <img class="portrait" src="./img/henry flying.JPG">
     {{>footer}}
 
 </body>
