--- a/web-server/public/css/styles.css
+++ b/web-server/public/css/styles.css
@@ -27,8 +27,27 @@ h1 {
     margin-bottom: 16px;
 }
 
+
 header a {
     color: #888888;
     margin-right: 16px;
     text-decoration: none
+}
+
+img {
+    width: 450px;
+    height: 350px;
+  }
+
+input {
+    border: 1px solid #cccccc;
+    padding: 8px;
+}
+
+button{
+    cursor: pointer;
+    border: 1px solid #888888;
+    background: #888888;
+    color: white;
+    padding: 8px
 }
