--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -4,13 +4,21 @@
 
 <head>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"> </script>
+
 </head>
 
 <body>
     {{>header}}
-    <p> created by {{name}}</p>
+
+    <form>
+        <input placeholder="address">
+        <button >Search</button>
+    </form>
+    <p id="message"></p>
+
     {{>footer}}
+
+        <script src="/js/app.js"> </script>
 </body>
 
 
